# a2a-share-state

./: README.md  pyproject.toml  start_a2a_server.sh
client/: agent.py
server/: remote_agent.py
